--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -70,14 +70,14 @@
             <div><i class="fa-solid fa-snowflake"></i></div>
             <p>Artic</p>
         </div>
-        <div class="filter">
+        <!-- <div class="filter">
             <div><i class="fa-solid fa-umbrella-beach"></i></div>
             <p>Beach</p>
         </div>
         <div class="filter">
             <div><i class="fa-solid fa-tree"></i></div>
             <p>Nature</p>
-        </div>
+        </div> -->
         <div class="tax-toggle">
             <div class="form-check-reverse form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexswitchCheckDefault">
